<?xml version="1.0" encoding="utf-8"?>
<resources>

     <string name="project_number">703520530847</string>
    <string name="app_id">302258396626501</string>
     <string name="preferences">PreferencesFile</string>
     <string name="first_launch">First Launch</string>
    <string name="num_of_missed_messages">MissedMessageCount</string>
    <string name="lines_of_message_count">LinesOfMessageCount</string>
    <string name="notification_number">1337</string>
     
    <string name="app_name">Surkus</string>
    <string name="facebook_user_msg">We will not post anything to your account without permission.</string>
    <string name="user_what_are_you_msg">We\'ve Revolutionized The Way That The Movers Communicate With The Shakers. </string>
    <string name="what_are_you">What Are You?</string>
    <string name="ring_master">ringMASTER</string>
    <string name="ring_master_msg">individuals looking to \'cast\' the perfect crowd and pack their parties.</string>
    <string name="cast_your_crowd">Cast Your Crowd</string>
    <string name="surkus_goer">SURKUSgoer</string>
    <string name="surkus_goer_msg">individuals looking to go out, have fun and get paid.</string>
    <string name="associate_your_facebook_account">Associate your Facebook account.</string>
    <string name="facebook_authenticated_msg">You\'ve successfully authenticated with Facebook Please enter your zip code and phone number below to complete registration.</string>
    <string name="push_notification_msg">Please allow SURKUS to send you \'Push Notifications\' and use your \'Current Location\'</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="hint_name">Name</string>
    <string name="hint_emailid">Email ID</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_dob">DOB</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_zipcode_postalcode">Zip Code/ Postal Code</string>
    <string name="hint_mobile_phone_number">Mobile Phone Number</string>
    <string name="go_to_profile">Go To Profile</string>
    <string name="register_thank_you_msg">Thank You For Submitting \n Your Registration.</string>
    <string name="pays_to_play">Now it Pays To Play</string>
    <string name="now_it_pays_to_play">Now it Pays To Play&#8230;</string>
    <string name="almost">ALMOST</string>
    <string name="enable_push_msg">Next enable \"Push Notifications\" to start receiving invitations and payment offers to visit upcoming social events at fun local spots.</string>
    <string name="account_pending">ACCOUNT PENDING</string>
    <string name="account_pending_msg">Your account is pending.\n We\'ll text you when your account is approved.</string>
    <string name="thank_you_tell_us_more">Thank You for Connecting with SURKUS.\n Your selections have been saved.</string>
    <string name="favorite_times_to_socialize">Favorite Times To Socialize?</string>
    <string name="favorite_spots_to_socialize">Favorite Spots To Socialize?</string>
    <string name="favorite_music">Favorite Music?</string>
    <string name="dashboard_msg_title">What to expect after your account has been approved!</string>
    <string name="dashboard_msg_1">Receive Invitation &amp; Payment offer to Events that Matches Your Preferences</string>
    <string name="dashboard_msg_2">Accept or Decline Invite and your Payment Offer</string>
    <string name="dashboard_msg_3">Check Into Event with Your Phone via SURKUS Upon Arrival</string>
    <string name="dashboard_msg_4">Get Paid Once Your Check In Has Been Confirmed</string>
    <string name="dashboard_friends_msg">Get friends involved. Tell them about SURKUS.</string>
    <!-- Alert message values -->
    <string name="error">Alert</string>
    <string name="zipcode_server_error_msg">Provide valid zipcode.</string>
    <string name="invalid_token_server_error_msg">Invalid Token.</string>
    <string name="server_error_msg">Server Error.</string>
    <string name="input_field_registration_warning_msg">Please provide 5 digit zipcode and 10 digit Mobile Phone Number.</string>
    <string name="input_field_zipcode_warning_msg">Please provide 5 digit zipcode.</string>
    <string name="input_field_phoneno_warning_msg">Please provide 10 digit Mobile Phone Number.</string>
    <string name="registering_user">Registering with Surkus&#8230;</string>
    <string name="loading">Loading&#8230;</string>

    <!-- SurkusGoer Menu -->
    <string-array name="surkusgoer_menu">
        <item>Profile</item>
        <item>Payment</item>
        <item>Share</item>
        <item>Notification</item>
        <item>Terms</item>
        <item>Privacy</item>
    </string-array>

    <!-- Surkusgoer account pending -->
    <string name="select_the_one_that_most_matches_you">Select the one that most matches you.</string>
    <string name="logout">Logout</string>

    <!-- Payment -->
    <string name="coming_soon">Coming Soon</string>
    <string name="coming_soon_msg1">Please stand by while we expand the functionality of the SURKUS platform.</string>
    <string name="coming_soon_msg2">Check back very soon. We move fast!</string>
    <string name="coming_soon_msg3"> © 2014 - SURKUS</string>
    <string name="coming_soon_warning">Coming Soon!</string>

    <!-- Ratings -->
    <string name="account_status_msg">We\'ll text you when your account is approved.</string>
    
    <string name="like_to_go">Let Us Know Where You Like To Go</string>

    <string-array name="like_to_go_options">
        <item>Nightclubs</item>
        <item>Wine Bars</item>
        <item>Sports Bars</item>
        <item>High-End Lounge</item>
    </string-array>

    <string name="drink_of_choice">What\'s Your Drink Of Choice?</string>

    <string-array name="drink_of_choice_options">
        <item>Beer</item>
        <item>Wine</item>
        <item>Cocktails</item>
        <item>Champagne</item>
    </string-array>

    <string name="music_preference">Turn That Up! What\'s Your Music Preference?</string>

    <string-array name="music_preference_options">
        <item>Hip Hop</item>
        <item>Top 20</item>
        <item>Rock</item>
        <item>Country</item>
    </string-array>

    <string name="submit">Submit</string>
    
    <string name="rating_alert">Please select 1-5 stars per category to continue.</string>
    <string name="category_not_found">Category Not Found</string>
    <string name="submitting_rating_msg">Submitting ratings&#8230;</string>
    
    <!-- Surkus goer welcome -->
    
    <string name="info1">SURKUS is a mobile "crodcasting" platform We enable people who run fun local spots and events to "cast" and <b>pay you</b> to simply attend and become a part of their "crowd".</string>
    
    <string name="info_2a">SURKUS mathches your social life preferences and </string>
    
    
    <string name="info_2b">Sends You Invitations + Payment Offers </string>
    <string name="info_2c">to visit upcoming social events at fun local spots.</string>
    
    
    <string name="info_3">Accept or Decline the event + payment offer</string>
    <string name="info_4">If accepted", You Attend the Event, check in upon arrival and get paid the approved amount immediately via PayPal</string>
    <string name="info_5">Log-in with Facebook and Become a SURKUSgoer</string>
    
    
      <string-array name="welcome_info">
        <item>SURKUS is a mobile \"crodcasting\" platform We enable people who run fun local spots and events to \"cast\" and <b>pay you</b> to simply attend and become a part of their \"crowd\".</item>
        <item>SURKUS mathches your social life preferences and Sends You Invitations + Payment Offers to visit upcoming social events at fun local spots.</item>
        <item>Accept or Decline the event + payment offer</item>
        <item >If \"accepted\", You Attend the Event, check in upon arrival and get paid the approved amount immediately via PayPal</item>
        <item>Log-in with Facebook and Become a SURKUSgoer</item>
    </string-array>
    
    <string name="no_device_found">No Device Found</string>
    
</resources>