<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.surkus.android.TestActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/header_imageview"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_50"
        android:background="@drawable/top_navigation"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/registration_thank_you_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/go_to_profile_layout"
        android:layout_below="@+id/header_imageview"
        android:background="@drawable/pink_background"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_30"
            android:gravity="center_horizontal"
            android:text="@string/register_thank_you_msg"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:contentDescription="@string/app_name"
            android:gravity="center_horizontal"
            android:src="@drawable/checkbtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_30"
            android:gravity="center_horizontal"
            android:text="@string/now_it_pays_to_play"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_2"
            android:gravity="center_horizontal"
            android:text="@string/almost"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_30"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/enable_push_msg"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/go_to_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/triangle_red" />

        <Button
            android:id="@+id/go_to_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:background="@drawable/navy_blue_background"
            android:padding="@dimen/margin_10"
            android:text="@string/go_to_profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

</RelativeLayout>