<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_50"
        android:background="@drawable/top_navigation"
        android:orientation="vertical" >

        <Button
            android:id="@+id/menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/menu_btn"
             android:layout_marginRight="@dimen/margin_5"
             />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_below="@+id/header_layout"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/coming_soon"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_150"
                android:background="@color/light_blue"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/coming_soon_warning"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginRight="@dimen/margin_2"
                    android:layout_marginTop="@dimen/margin_30"
                    android:text="@string/coming_soon_msg1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/coming_soon_msg2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/coming_soon_msg3"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>