<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/login_logo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_50"
        android:background="@drawable/top_navigation"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:text="@string/user_what_are_you_msg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:padding="@dimen/margin_5"
            android:text="@string/what_are_you"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.35"
            android:background="@drawable/blue_background_top_arrow"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/ring_master"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@string/ring_master_msg"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_14" />

            <Button
                android:id="@+id/Button01"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_30"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/cast_now_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/cast_your_crowd"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:background="@drawable/blue_background_top_arrow"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/ring_master"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/ring_master_msg"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_14" />

        <Button
            android:id="@+id/cast_now_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/cast_now_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/cast_your_crowd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_5"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:background="@color/pink"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/surkus_goer"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/surkus_goer_msg"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_14" />

        <Button
            android:id="@+id/be_casted_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/be_casted_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/now_it_pays_to_play"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>